creditas-sf/force-app/main/default/objects/OpportunityProcess__c/OpportunityProcess__c.object-meta.xml
<CustomObject>
    <label>Processos da Oportunidade</label>
    <nameField>
        <label>Processos da Oportunidade Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processos da Oportunidade</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>