creditas-sf/force-app/main/default/objects/OpportunityProcess__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Processos da Oportunidade</relationshipLabel>
    <relationshipName>Processos_da_Oportunidade</relationshipName>
    <type>Lookup</type>
</CustomField>