creditas-sf/force-app/main/default/objects/OpportunityProcess__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em Aberto</fullName>
            </value>
            <value>
                <fullName>Em Andamento</fullName>
            </value>
            <value>
                <fullName>Concluído</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>