creditas-sf/force-app/main/default/objects/OpportunityProcess__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>